<resources>
    <string name="app_name">Taskly</string>
    <string name="enter_task_name">Enter task name</string>
    <string name="enter_task_description">Enter task description</string>
    <string name="create">Create</string>
    <string name="enter_date">Enter date</string>
    <string name="button">Button</string>
    <string name="enter_your_name">Enter your Username</string>
    <string name="textview">TextView</string>
    <string name="create_button">Create Group</string>
    <string name="join_button">join Group</string>
    <string name="textviewName">TextView</string>
    <string name="textviewDone">TextView</string>
    <string name="textviewAssignment">TextView</string>
    <string name="textviewDate">TextView</string>
    <string name="assignment">Assignment</string>
    <string name="not_finished">not finished</string>
    <string name="done">Done</string>
    <string name="in_progress">in progress</string>
    <string name="not_assigned">not assigned</string>
    <string name="enter_password">enter Password</string>
    <string name="enter_email">enter Email</string>
    <string name="buttonLogout">Logout</string>
    <string name="cancel">Cancel</string>
    <string name="set_in_progress">Set in progress</string>
    <string name="set_done">Set done</string>
    <string name="buttonDelete">Delete</string>
    <string name="assigned">assigned</string>
    <string name="buttonEdit">Edit</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="buttonCreateGroup">Create Group</string>
    <string name="groupName">Enter Group Name</string>
    <string name="buttonJoinGroup">Join</string>
    <string name="copy_groupId">copy Group ID</string>
    <string name="buttonLeave">Leave Group</string>
    <string name="join_info">only mandatory for join</string>
    <string name="create_info">only mandatory for creation</string>
    <string name="edit">Edit</string>
    <string name="buttonReassign">Reassign</string>
</resources>